# superpowered-universal-app

./: .gitignore  README.md  asset-manifest.json  index.html  manifest.json
android/: .gitignore  build.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: SuperpoweredUniversalApp.cpp  SuperpoweredUniversalApp.h
android/app/src/main/java/com/superpowered/boilerplate/: MainActivity.java
android/app/src/main/java/com/superpowered/universalpapp/: MainActivity.java
android/app/src/main/res/drawable/: ic_launcher_superpowered_foreground.xml  ic_superpowered_black.xml  ic_wave.xml  rounded_background.xml  rounded_corners.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_superpowered_round.xml
android/app/src/main/res/values/: ic_launcher_superpowered_background.xml  strings.xml
cpp/: MixerChannel.cpp  MixerChannel.hpp  MixerEngine.cpp  MixerEngine.hpp
iOS/: SuperpoweredUniversalApp--iOS--Info.plist
iOS/Shared/: AudioEngine.h  AudioEngine.mm  ContainerView.swift  ContentView.swift  SuperpoweredUniversalApp (iOS)-Bridging-Header.h  SuperpoweredUniversalAppApp.swift
iOS/SuperpoweredUniversalApp.xcodeproj/: project.pbxproj
iOS/iOS/: AudioEngineIOS.h  AudioEngineIOS.mm
javascript/: README.md  package.json
javascript/public/: index.html  site.webmanifest
processorScripts/: mixerChannel.js  mixerEngine.js  mixerProcessorScript.js
superpowered/: SuperpoweredTrackLoaderWorker.js
windows/: SuperpoweredUniversalApp.sln
(+84 files in other folders)
